cmake_minimum_required(VERSION 3.25)
project(SoftGpu VERSION 1.0.0 LANGUAGES CXX C)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

include(CTest)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

set(SDL_SHARED OFF)
set(SDL_STATIC ON)
set(SDL_GPU_DEFAULT OFF)
set(SDL_RENDER_DEFAULT OFF)
set(SDL_CAMERA_DEFAULT OFF)
set(SDL_SENSOR_DEFAULT OFF)
set(SDL_ALSA OFF)
set(SDL_DIRECTX OFF)
set(SDL_JACK OFF)
set(SDL_METAL OFF)
set(SDL_OPENGL OFF)
set(SDL_OPENGLES OFF)
set(SDL_OPENVR OFF)
set(SDL_PIPEWIRE OFF)
set(SDL_PULSEAUDIO OFF)
set(SDL_VULKAN ON)

add_subdirectory(libs/SDL EXCLUDE_FROM_ALL)
add_subdirectory(HardwareCommon)
add_subdirectory(RISCV)
add_subdirectory(SoftGpu)
add_subdirectory(VirtualDisplay)
add_subdirectory(SoftGpuRunner)

if(WIN32)
    # add_subdirectory(VirtualBoxDevice)
    add_subdirectory(VirtualBoxDeviceLoader)
endif()
